chore: fix the language switcher layout jumping issue

--- a/apps/frontend/src/app/[locale]/components/LanguageSwitcher/index.style.css
+++ b/apps/frontend/src/app/[locale]/components/LanguageSwitcher/index.style.css
@@ -41,7 +41,3 @@
   padding-block-end: 10px;
   padding-block-start: 10px;
 }
-
-.utrecht-language-switcher__skeleton-container {
-  justify-content: end;
-}
